@@ -4,7 +4,9 @@ Changelog
 1.7.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Allow hyphens and commas simple terms and simple searches.
+  Fixes issue where a comma/hyphon in a search term causes search_pattern template to be circumvented.
+  [mathias.leimgruber]
 
 
 1.7.0 (2016-07-22)
